# cpp-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DLLoader/: CMakeLists.txt
DLLoader/Exception/: DLLoaderException.h
DLLoader/Unix/: DLLoader.h
DLLoader/Windows/: DLLoader.h
FileSystem/: AFSManager.cpp  AFSManager.h  CMakeLists.txt  IFSManager.h
FileSystem/Unix/: FSManager.cpp  FSManager.h  FSNotifyWhenFileChanged.cpp
FileSystem/Windows/: FSManager.cpp  FSManager.h  FSNotifyWhenFileChanged.cpp
RLoader/: CMakeLists.txt
RLoader/Unix/: RLoader.cpp  RLoader.h
RLoader/Windows/: RLoader.cpp  RLoader.h
Singleton/: Singleton.h
Targets/Libraries/: DLLoader.lib  FileSystem.lib  RLoader.lib  WindowsUtility.lib  tp_serializer.lib
WindowsUtility/: CMakeLists.txt  WindowsUtility.cpp  WindowsUtility.h
neon_engine/: CMakeLists.txt  SdlPointer.h  neon_engine.h
neon_engine/Core/: Core.cpp  Core.h  EventManager.cpp  Init.cpp  NeonException.h  StateManager.cpp  event.h
neon_engine/Ecs/Component/: AComponent.h  ComponentException.h  ComponentTypeManager.h
neon_engine/Ecs/Entity/: Entity.cpp  Entity.h  EntityManager.h
neon_engine/Ecs/System/: ASystem.cpp  ASystem.h
neon_engine/GObject/: AGObject.h  IGObject.h
neon_engine/GObject/Button/: Button.cpp  Button.h
neon_engine/GObject/Image/: Image.cpp  Image.h
neon_engine/GObject/Text/: Text.cpp  Text.h
neon_engine/GObject/TextInput/: TextInput.cpp  TextInput.h
neon_engine/GState/: AGameState.h  IGameState.h
neon_engine/Rendering/: Color.h  FontBuilder.h  Vector.h
neon_engine/State/: AState.h  IState.h
neon_engine/UI/: AUIObject.h  IUIObject.h
neon_engine/UI/Button/: Button.h
neon_engine/UI/Image/: Image.h
neon_engine/UI/Text/: Text.cpp  Text.h
neon_engine/UI/TextInput/: TextInput.h
tp_dlloader/: CMakeLists.txt  IDLLoader.h
tp_dlloader/Exception/: DLLoaderException.cpp  DLLoaderException.h
tp_dlloader/Unix/: DLLoader.h
tp_dlloader/Windows/: DLLoader.h
tp_ecs/: CMakeLists.txt  tp_ecs.h
tp_ecs/Component/: AComponent.h  ComponentException.h  ComponentTypeManager.h
tp_ecs/Entity/: Entity.cpp  Entity.h  EntityManager.h
tp_ecs/System/: ASystem.cpp  ASystem.h
tp_filesystem/: AFSManager.cpp  AFSManager.h  CMakeLists.txt  IFSManager.h
tp_filesystem/Unix/: FSManager.cpp  FSManager.h  FSNotifyWhenFileChanged.cpp
tp_filesystem/Windows/: FSManager.cpp  FSManager.h  FSNotifyWhenFileChanged.cpp
tp_game_engine/: CMakeLists.txt  SdlPointer.h  tp_game_engine.h
tp_game_engine/GEngine/: EventManager.cpp  GEngine.cpp  GEngine.h  GEngineException.h  Init.cpp  StateManager.cpp  event.h
tp_game_engine/GameObject/: AGObject.h
tp_game_engine/GameObject/Button/: Button.cpp  Button.h
tp_game_engine/GameObject/Image/: Image.cpp  Image.h
tp_game_engine/GameState/: IGameState.h
tp_game_engine/Rendering/: Color.h  FontBuilder.h  Vector.h
tp_game_engine/UIObject/: AWidget.h  Button.cpp  Button.h  IGObject.h
tp_network/: CMakeLists.txt  tp_network.h
tp_network/Client/: Client.h  GenericClient.h
tp_network/Libraries/sole/: sole.hpp
tp_network/Message/: Message.h  MessageException.h  PacketBuild.h
tp_network/Server/: GenericServer.h  Server.h  Session.h
tp_rloader/: CMakeLists.txt
tp_rloader/Unix/: RLoader.cpp  RLoader.h
tp_rloader/Windows/: RLoader.cpp  RLoader.h
tp_serializer/: CMakeLists.txt  IJsonSerializable.h  JsonSerializer.cpp  JsonSerializer.h
tp_singleton/: CMakeLists.txt  Singleton.h
tp_windows_utility/: CMakeLists.txt  WindowsUtility.cpp  WindowsUtility.h
